# xarajlt_game

./: CMakeLists.txt  README.txt
header/: move.hpp  state.hpp  tt.hpp  xarajlt.hpp
source/: main.cpp  move.cpp  state.cpp  tt.cpp  xarajlt.cpp
